<resources>
    <string name="app_name">SEVICE_A</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nav_my_information">내 정보 수정</string>

    <string name="nav_setting">설정</string>
    <string name="nav_setting_menu1">푸시 알림</string>
    <string name="nav_setting_menu2">소리 설정</string>

    <string name="nav_help">도움말</string>
    <string name="nav_frequently_asked_questions">자주 묻는 질문</string>
    <string name="nav_one_to_one_consulting">1:1 상담</string>
    <string name="nav_privacy_terms">개인정보약관</string>

    <string name="nav_logout">로그아웃</string>

    <string name="drawer_header_text">제리 사장님</string>

    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>
    <string name="title_activity_second">SecondActivity</string>
</resources>

